--- a/css/assets/kit.css
+++ b/css/assets/kit.css
@@ -1,65 +1,52 @@
 body {
-  margin-bottom: 160px;
-  background: c-bg;
+  margin: 0 auto;
+  margin-bottom: 12.5rem;
+  background: #e6e6e6;
+  max-width: 62.5rem;
+  padding: 2.5rem 0;
 }
-.hash-e {
+.k-hash {
   font-size: 12px;
   color: #d9d9d9;
-  margin-bottom: 8px;
-  margin-top: 16px;
+  margin-bottom: 0.625rem;
+  margin-top: 1.25rem;
   max-width: 100%;
-  padding: 8px 0;
+  padding: 0.625rem 0;
   white-space: nowrap;
   -webkit-text-overflow: ellipsis;
   -moz-text-overflow: ellipsis;
   -o-text-overflow: ellipsis;
   text-overflow: ellipsis;
   overflow: hidden;
-  width: 40px;
+  width: 3.125rem;
 }
-.icon-sample-kl {
-  float: left;
-  margin: 16px;
+.k-section {
+  margin-left: 1.25rem;
+}
+.k-section + .k-section {
+  margin-top: 5rem;
+}
+.k-section__header {
+  font-size: 16px;
+  padding: 1.25rem 0;
+  color: #a1a1a1;
+  background-color: rgba(0,0,0,0.01);
+  padding-left: 1.25rem;
+  margin-left: -1.25rem;
+  border-radius: 0.1875rem;
 }
 .k-sample {
   float: left;
-  margin: 16px;
+  margin: 1.25rem;
 }
-.k-content {
-  background-color: #d9d9d9;
-  width: 100%;
-  height: 100%;
-  min-height: 16px;
-  border-radius: 3px;
-}
-.main-kl {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 32px 0;
-}
-.section-kl {
-  margin-left: 16px;
-}
-.section-kl + .section-kl {
-  margin-top: 64px;
-}
-.header-ke {
-  font-size: 16px;
-  padding: 16px 0;
-  color: #a1a1a1;
-  background-color: rgba(0,0,0,0.01);
-  padding-left: 16px;
-  margin-left: -16px;
-  border-radius: 3px;
-}
-.color-sample-ke {
-  width: 32px;
-  height: 32px;
-  margin: 8px;
+.k-color {
+  width: 2.5rem;
+  height: 2.5rem;
+  margin: 0.625rem;
   float: left;
 }
-.k-w-bg {
+.k-canvas {
   background-color: #fff;
-  padding: 16px;
-  border-radius: 3px;
+  padding: 1.25rem;
+  border-radius: 0.1875rem;
 }
