--- a/css/assets/kit.styl
+++ b/css/assets/kit.styl
@@ -2,10 +2,13 @@
 @import '../assets/imports.styl'
 
 body
+  margin 0 auto
   margin-bottom 20*gs
   background c-bg
+  max-width 100*gs
+  padding 4*gs 0
 
-.hash-e
+.k-hash
   font-size 12px
   color c-grey6
   margin-bottom gs
@@ -15,45 +18,29 @@ body
   textel()
   width 5*gs
 
-.icon-sample-kl
-  float left
-  margin 2*gs
+.k-section
+  margin-left 2*gs
+  & + &
+    margin-top 8*gs
+  &__header
+    font-size 16px
+    padding 2*gs 0
+    color c-grey4
+    background-color rgba(0,0,0,.01)
+    padding-left 2*gs
+    margin-left -2*gs
+    border-radius br
 
 .k-sample
   float left
   margin 2*gs
 
-.k-content
-  background-color c-grey6
-  rect 100%
-  min-height 2*gs
-  border-radius br
-
-.main-kl
-  max-width 100*gs
-  margin 0 auto
-  padding 4*gs 0
-
-.section-kl
-  margin-left 2*gs
-  & + .section-kl
-    margin-top 8*gs
-
-.header-ke
-  font-size 16px
-  padding 2*gs 0
-  color c-grey4
-  background-color rgba(0,0,0,.01)
-  padding-left 2*gs
-  margin-left -2*gs
-  border-radius br
-
-.color-sample-ke
+.k-color
   rect 4*gs
   margin gs
   float left
 
-.k-w-bg
+.k-canvas
   background-color white
   padding 2*gs
   border-radius br
