--- a/css/general/general.styl
+++ b/css/general/general.styl
@@ -9,7 +9,7 @@ html
   font-size 16px
   
 body, html
-  min-rect 100%
+  min-height 100%
   margin 0
   padding 0
 
@@ -17,7 +17,6 @@ body
   min-height 100%
   font-family 'Open Sans'
   background-color c-bg
-  // background-color rgba(c-green1, .5)
   color c-grey1
 
 
