--- a/css/assets/kit.css
+++ b/css/assets/kit.css
@@ -27,7 +27,7 @@ body {
   margin-top: 5rem;
 }
 .k-section__header {
-  font-size: 16px;
+  line-height: inherit;
   padding: 1.25rem 0;
   color: #a1a1a1;
   background-color: rgba(0,0,0,0.01);
