--- a/css/assets/kit.styl
+++ b/css/assets/kit.styl
@@ -23,7 +23,7 @@ body
   & + &
     margin-top 8*gs
   &__header
-    font-size 16px
+    line-height inherit
     padding 2*gs 0
     color c-grey4
     background-color rgba(0,0,0,.01)
