--- a/index.jade
+++ b/index.jade
@@ -266,7 +266,10 @@ html
       //-       .grid-bit(class="grid-bit--#{gridSize-i}-#{gridSize}"): .k-content
 
 
-
+      script(src="js/libs/jquery-1.10.2.js")
+      script(src="js/libs/handlebars-v1.3.0.js")
+      script(src="js/libs/ember-1.8.1.js")
+      script(src="js/app.js")
 
 
 
