--- a/index.jade
+++ b/index.jade
@@ -276,22 +276,22 @@ html
         .header-ke Icons
         .cf 
         .k-sample
-          .k-hash#b749f3862138d6f5dc48e711cf78d96f b749f3862138d6f5dc48e711cf78d96f
+          .k-hash#b749f3862138d6f5dc48e711cf78d96f
           - var el = { path: 'dribbble-icon' }
           include partials/icon
 
         .k-sample
-          .k-hash#3fa272e8fb10c79190156c1cb76e17b8 3fa272e8fb10c79190156c1cb76e17b8
+          .k-hash#3fa272e8fb10c79190156c1cb76e17b8
           - var el = { path: 'heart-icon' }
           include partials/icon
 
         .k-sample
-          .k-hash#1d5ad044bb593b686a15420d384d1ca1 1d5ad044bb593b686a15420d384d1ca1
+          .k-hash#1d5ad044bb593b686a15420d384d1ca1
           - var el = { path: 'twitter-icon' }
           include partials/icon
 
         .k-sample
-          .k-hash#7e6dd7f5097564bf71405babb48d7f26 7e6dd7f5097564bf71405babb48d7f26
+          .k-hash#7e6dd7f5097564bf71405babb48d7f26
           - var el = { path: 'share-icon' }
           include partials/icon
 
