--- a/index.jade
+++ b/index.jade
@@ -266,11 +266,10 @@ html
       //-       .grid-bit(class="grid-bit--#{gridSize-i}-#{gridSize}"): .k-content
 
 
-      script(src="js/lib/jquery-1.10.2.js")
-      script(src="js/lib/handlebars-v1.3.0.js")
-      script(src="js/lib/ember-1.8.1.js")
+      script(src="js/lib/jquery-2.1.1.js")
+      script(src="js/lib/lodash.underscore.js")
+      script(src="js/lib/backbone.js")
       script(src="js/app.js")
-      script(src="js/router.js")
 
 
 
