--- a/index.jade
+++ b/index.jade
@@ -264,11 +264,15 @@ html
       //-     .grid.grid--sliced.grid--gutter-x4.m-t-x2-g
       //-       .grid-bit(class="grid-bit--#{i}-#{gridSize}"):    .k-content
       //-       .grid-bit(class="grid-bit--#{gridSize-i}-#{gridSize}"): .k-content
-
+  
+      a(href="#/colors") colors
+      br
+      a(href="#/") index
 
       script(src="js/lib/jquery-2.1.1.js")
       script(src="js/lib/lodash.underscore.js")
       script(src="js/lib/backbone.js")
+      script(src="js/router.js")
       script(src="js/app.js")
 
 
