add photo page view

--- a/index.jade
+++ b/index.jade
@@ -273,6 +273,12 @@ html
       script(src="js/lib/lodash.underscore.js")
       script(src="js/lib/backbone.js")
       script(src="js/router.js")
+      
+      //- VIEWS
+      script(src="js/proto-view.js")
+      script(src="js/proto-page-view.js")
+
+
       script(src="js/app.js")
 
 
