add pages templates lazy loading

--- a/index.jade
+++ b/index.jade
@@ -8,28 +8,29 @@ html
     //- link(rel="stylesheet", href="css-assets/font/stylesheet.css", type="text/css", charset="utf-8")
   body
     include icons.svg
-    .k-section
-      .k-section__header Colors
-      .cf.m-t-x3-g
-        .k-color.c-grey1-bg-g
-        .k-color.c-grey2-bg-g
-        .k-color.c-grey3-bg-g
-        .k-color.c-grey4-bg-g
-        .k-color.c-grey5-bg-g
-        .k-color.c-grey6-bg-g
-        .k-color.c-grey7-bg-g
-        .k-color.c-grey8-bg-g
-        .k-color.c-grey9-bg-g
-        .k-color.c-grey10-bg-g
+    #js-pages
+    //- .k-section
+    //-   .k-section__header Colors
+    //-   .cf.m-t-x3-g
+    //-     .k-color.c-grey1-bg-g
+    //-     .k-color.c-grey2-bg-g
+    //-     .k-color.c-grey3-bg-g
+    //-     .k-color.c-grey4-bg-g
+    //-     .k-color.c-grey5-bg-g
+    //-     .k-color.c-grey6-bg-g
+    //-     .k-color.c-grey7-bg-g
+    //-     .k-color.c-grey8-bg-g
+    //-     .k-color.c-grey9-bg-g
+    //-     .k-color.c-grey10-bg-g
 
-      .cf
-        .k-color.c-red1-bg-g
-        .k-color.c-red2-bg-g
+    //-   .cf
+    //-     .k-color.c-red1-bg-g
+    //-     .k-color.c-red2-bg-g
 
-      .cf
-        .k-color.c-facebook-bg-g
-        .k-color.c-blue1-bg-g
-        .k-color.c-green1-bg-g
+    //-   .cf
+    //-     .k-color.c-facebook-bg-g
+    //-     .k-color.c-blue1-bg-g
+    //-     .k-color.c-green1-bg-g
 
       //- - var data = {}
 
@@ -269,17 +270,17 @@ html
       br
       a(href="#/") index
 
-      script(src="js/lib/jquery-2.1.1.js")
-      script(src="js/lib/lodash.underscore.js")
-      script(src="js/lib/backbone.js")
-      script(src="js/router.js")
-      
-      //- VIEWS
-      script(src="js/proto-view.js")
-      script(src="js/proto-page-view.js")
+    script(src="js/lib/jquery-2.1.1.js")
+    script(src="js/lib/lodash.underscore.js")
+    script(src="js/lib/backbone.js")
+    
+    //- VIEWS
+    script(src="js/proto-view.js")
+    script(src="js/proto-page-view.js")
 
+    script(src="js/router.js")
 
-      script(src="js/app.js")
+    script(src="js/app.js")
 
 
 
