add nesting-tree-traversal plugin

--- a/css/assets/mixins.styl
+++ b/css/assets/mixins.styl
@@ -7,6 +7,8 @@ contentLayer = 10
 headerLayer  = 20
 modalLayer   = 30
 
+use('../assets/nesting-tree-traversal.js')
+
 easy-click()
   &:after
     content ''
