--- a/css/general/general.styl
+++ b/css/general/general.styl
@@ -4,10 +4,10 @@
 *
   bbox()
 
-
 html
   font-size   16px
-  line-height 200.5px
+  line-height 1.5
+  letter-spacing .5*PX
   
 body, html
   min-height 100%
@@ -15,7 +15,7 @@ body, html
   padding 0
 
 body
-  font-family 'Open Sans'
+  font-family 'Open Sans', 'Consolas', monospace
   background-color c-bg
   color c-grey1
 
