--- a/css/main.css
+++ b/css/main.css
@@ -131,7 +131,8 @@ table {
 }
 html {
   font-size: 16px;
-  line-height: 200.5px;
+  line-height: 1.5;
+  letter-spacing: 0.03125rem;
 }
 body,
 html {
@@ -140,7 +141,7 @@ html {
   padding: 0;
 }
 body {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', 'Consolas', monospace;
   background-color: #e6e6e6;
   color: #4d4d4d;
 }
