--- a/css/assets/mixins.styl
+++ b/css/assets/mixins.styl
@@ -82,6 +82,11 @@ min-rect(size)
   min-width size
   min-height size
 
+margin-center-v(size)
+  position absolute
+  top 50%
+  margin-top: -(size/2)
+
 hl(color=deeppink, size=1px)
   outline size solid color
 
