--- a/index.jade
+++ b/index.jade
@@ -8,7 +8,110 @@ html
     //- link(rel="stylesheet", href="css-assets/font/stylesheet.css", type="text/css", charset="utf-8")
   body
     include icons.svg
-    #js-pages
+    .k-header
+      .k-main-logo-icon
+        - el = { path: 'main-logo-icon', class: '', id: ''} 
+        include partials/icon
+      .k-menu-icon
+        - el = { path: 'menu-icon', class: '', id: ''} 
+        include partials/icon
+    #js-pages.cf
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
+    p   aaa
     //- .k-section
     //-   .k-section__header Colors
     //-   .cf.m-t-x3-g
