--- a/page-templates/icons.jade
+++ b/page-templates/icons.jade
@@ -17,3 +17,8 @@
   .k-hash#7e6dd7f5097564bf71405babb48d7f26
   - var el = { path: 'share-icon' }
   include ../partials/icon
+
+.k-sample
+  .k-hash#b3b8499d4aa6dade287533ab49b44ef2
+  - var el = { path: 'menu-icon' }
+  include ../partials/icon
