--- a/index.jade
+++ b/index.jade
@@ -15,103 +15,8 @@ html
       .k-menu-icon
         - el = { path: 'menu-icon', class: '', id: ''} 
         include partials/icon
-    #js-pages.cf
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
-    p   aaa
+    #js-pages.k-pages
+
     //- .k-section
     //-   .k-section__header Colors
     //-   .cf.m-t-x3-g
