--- a/css/assets/kit.css
+++ b/css/assets/kit.css
@@ -3,8 +3,19 @@ body {
   margin-bottom: 12.5rem;
   background: #e6e6e6;
   max-width: 62.5rem;
-  padding: 2.5rem 0;
-  padding-top: 4.0625rem;
+  overflow: hidden;
+}
+.k-pages {
+  overflow: auto;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 0;
+  margin-top: 4.0625rem;
+  padding: 1.25rem 5rem;
+  padding-left: 20rem;
+  top: 0;
+  left: 0;
 }
 .k-header {
   height: 4.0625rem;
@@ -13,12 +24,13 @@ body {
   border-bottom-right-radius: 0.1875rem;
   box-shadow: 0 0.25rem 0 rgba(0,0,0,0.2);
   position: absolute;
+  z-index: 20;
   width: 100%;
   top: 0;
   left: 0;
 }
 .k-header .k-main-logo-icon {
-  left: 1.25rem;
+  left: 1.875rem;
   test: 1.5625rem;
   position: absolute;
   top: 50%;
@@ -32,7 +44,7 @@ body {
   position: absolute;
   top: 50%;
   margin-top: -0.5rem;
-  right: 1.25rem;
+  right: 1.875rem;
 }
 .k-header .k-menu-icon:after {
   content: '';
