--- a/css/assets/colors.styl
+++ b/css/assets/colors.styl
@@ -31,9 +31,7 @@ c-grey6-hover = lighten(c-grey6, 5)
 c-grey7 = lighten(c-grey6, stepSize)
 c-grey7-hover = lighten(c-grey7, 5)
 
-c-bg = lighten(c-grey6,5)
-
-
+c-bg = #F3F3F3
 
 
 c-almost-grey7 = lighten(c-grey7, 2)
