--- a/css/main.css
+++ b/css/main.css
@@ -142,7 +142,7 @@ html {
 }
 body {
   font-family: 'Open Sans', 'Consolas', monospace;
-  background-color: #e6e6e6;
+  background-color: #f3f3f3;
   color: #4d4d4d;
 }
 ::selection {
