--- a/index.jade
+++ b/index.jade
@@ -15,6 +15,15 @@ html
       .k-menu-icon
         - el = { path: 'menu-icon', class: '', id: ''} 
         include partials/icon
+
+    .k-nav
+      .k-navigation-header Pages
+      a(href="#").k-navigation-link  Colors
+      a(href="#").k-navigation-link  Type
+      a(href="#").k-navigation-link  Icons
+      a(href="#").k-navigation-link  Buttons
+      a(href="#").k-navigation-link  Forms
+
     #js-pages.k-pages
 
     //- .k-section
