add left navigation

--- a/css/assets/colors.styl
+++ b/css/assets/colors.styl
@@ -7,7 +7,7 @@ c-red2   		= #FB7BC3
 c-blue1  		= #00AEFF
 c-blue1-hover  = lighten(c-blue1, 5)
 
-c-green1 		= #50E3C2
+c-green 		= #50E3C2
 c-facebook 	= #3B5998
 
 stepSize = 11
