--- a/css/assets/kit.css
+++ b/css/assets/kit.css
@@ -7,8 +7,9 @@ body {
 }
 .k-nav {
   position: absolute;
+  z-index: 5;
   left: 3.75rem;
-  top: 9.0625rem;
+  top: 8.125rem;
   color: #b9b9b9;
   font-size: 0.75rem;
   margin-bottom: 1.25rem;
@@ -25,6 +26,32 @@ body {
   display: block;
   font-size: 1rem;
   text-decoration: none;
+  position: relative;
+}
+.k-navigation-link:before {
+  content: '';
+  position: absolute;
+  width: 0.375rem;
+  height: 0.375rem;
+  border-radius: 50%;
+  background-color: #717479;
+  position: absolute;
+  top: 50%;
+  margin-top: -0.1875rem;
+  left: -0.9375rem;
+  opacity: 0;
+}
+.k-navigation-link:hover {
+  cursor: pointer;
+}
+.k-navigation-link:hover:before {
+  opacity: 1;
+}
+.k-navigation-link.is-check {
+  cursor: default;
+}
+.k-navigation-link.is-check:before {
+  background-color: #50e3c2;
 }
 .k-pages {
   overflow: auto;
@@ -35,6 +62,7 @@ body {
   margin-top: 4.0625rem;
   padding: 1.25rem 5rem;
   padding-left: 20rem;
+  padding-top: 5.9375rem;
   top: 0;
   left: 0;
 }
@@ -43,7 +71,7 @@ body {
   background-color: #fff;
   border-bottom-left-radius: 0.1875rem;
   border-bottom-right-radius: 0.1875rem;
-  box-shadow: 0 0.25rem 0 rgba(0,0,0,0.2);
+  box-shadow: 0 0.1875rem 0 rgba(0,0,0,0.1);
   position: absolute;
   z-index: 20;
   width: 100%;
