--- a/css/assets/kit.styl
+++ b/css/assets/kit.styl
@@ -29,6 +29,7 @@ body
   font-size 16*PX
   text-decoration none
   position relative
+  text-transform capitalize
   circleSize = 6*PX
   &:before
     content ''
@@ -46,6 +47,7 @@ body
     cursor default
     &:before
       background-color c-green
+      opacity 1
 .k-pages
   overflow auto
   rect 100%
