--- a/pages/icons.jade
+++ b/pages/icons.jade
@@ -1,24 +1,24 @@
 .k-sample
   .k-hash#b749f3862138d6f5dc48e711cf78d96f
   - var el = { path: 'dribbble-icon' }
-  include ../partials/icon
+  include partials/icon
 
 .k-sample
   .k-hash#3fa272e8fb10c79190156c1cb76e17b8
   - var el = { path: 'heart-icon' }
-  include ../partials/icon
+  include partials/icon
 
 .k-sample
   .k-hash#1d5ad044bb593b686a15420d384d1ca1
   - var el = { path: 'twitter-icon' }
-  include ../partials/icon
+  include partials/icon
 
 .k-sample
   .k-hash#7e6dd7f5097564bf71405babb48d7f26
   - var el = { path: 'share-icon' }
-  include ../partials/icon
+  include partials/icon
 
 .k-sample
   .k-hash#b3b8499d4aa6dade287533ab49b44ef2
   - var el = { path: 'menu-icon' }
-  include ../partials/icon
+  include partials/icon
