working on tests

--- a/.docit/css/assets/kit.styl
+++ b/.docit/css/assets/kit.styl
@@ -59,6 +59,8 @@ body
   padding-left 32*gs
   padding-top 9.5*gs 
   nw 0
+  line-height 3*gs
+  color c-grey1
   
 .k-header
   height headerHeight
