--- a/.docit/css/assets/kit.css
+++ b/.docit/css/assets/kit.css
@@ -67,6 +67,8 @@ body {
   padding-top: 5.9375rem;
   top: 0;
   left: 0;
+  line-height: 1.875rem;
+  color: #4d4d4d;
 }
 .k-header {
   height: 4.0625rem;
